--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -9,15 +9,13 @@
 </head>
 <body class="body-b">
 
-  <!-- Header reutilizado -->
   <header>
     <div class="top-header">
       <div class="container d-flex flex-column align-items-center">
-        <!-- Logo -->
         <a href="#">
           <img class="logo" src="../img/logoluz.jpg" alt="Logo">
         </a>
-        <!-- Imagen que reemplaza el nombre de la empresa -->
+        
         <img class="company-name-image" src="../img/luzz.jpg" alt="Company Name">
       </div>
     </div>
@@ -32,15 +30,7 @@
               <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
             </li>
             <li class="nav-item dropdown">
-              <!-- <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Shop
-              </a>
-             <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="desfiles.html">Desfiles</a></li>
-                <li><a class="dropdown-item" href="vestidos.html">Vestidos</a></li>
-              </ul>
-            </li>-->
-            <li class="nav-item"></li>
+              <li class="nav-item"></li>
               <a class="nav-link" href="../sections/shop.html">Shop</a>
             </li>
             <li class="nav-item">
@@ -54,11 +44,9 @@
       </div>
     </nav>
   </header>
-
-  <!-- Main content area (aquí puedes agregar el contenido nuevo de la sección) -->
-  <main class="main-l"></main>
+  <main class="main-l">
     <div class="container mt-5">
-      <h2 class="text-center mb-4">AGENDA TU CITA</h2>
+      <h2 class="text-center mb-4"></h2>
       <div class="row justify-content-center">
         <div class="col-lg-6">
           <form action="#" method="post" class="contact-form p-4 rounded">
@@ -87,11 +75,9 @@
     </div>
   </main>
 
-  <!-- Footer reutilizado -->
   <footer class="bg-dark text-white py-4">
     <div class="container">
       <div class="row">
-        <!-- Redes sociales -->
         <div class="col-md-4 mb-3 mb-md-0 d-flex flex-column align-items-center">
           <h5>Contactate con nosotros</h5>
           <ul class="list-unstyled d-flex justify-content-center">
@@ -102,11 +88,10 @@
               <a class="text-white" href="#"><img src="../img/instagram.png" alt="Instagram" width="24"></a>
             </li>
             <li class="ms-3">
-              <a class="text-white" href="#"><img src="../img/tik-tok (1).png" alt="Twitter" width="24"></a>
+              <a class="text-white" href="#"><img src="../img/tik-tok (1).png" alt="TikTok" width="24"></a>
             </li>
           </ul>
         </div>
-        <!-- Derechos de autor -->
         <div class="col-md-4 text-md-end text-center">
           <h5>&copy; 2024 LS. Todos los derechos reservados.</h5>
         </div>
