--- a/sections/shop.html
+++ b/sections/shop.html
@@ -8,16 +8,12 @@
     <title>Shop</title>
 </head>
 <body class="body-b">
-
-  <!-- Header reutilizado -->
   <header>
     <div class="top-header">
       <div class="container d-flex flex-column align-items-center">
-        <!-- Logo -->
         <a href="#">
           <img class="logo" src="../img/logoluz.jpg" alt="Logo">
         </a>
-        <!-- Imagen que reemplaza el nombre de la empresa -->
         <img class="company-name-image" src="../img/luzz.jpg" alt="Company Name">
       </div>
     </div>
@@ -55,10 +51,9 @@
     </nav>
   </header>
 
-  <!-- Main content area (aquí puedes agregar el contenido nuevo de la sección) -->
   <main class="main-l">
     <div class="container mt-5">
-      <h2 class="text-center mb-4 section-title">Shop</h2>
+      <h2 class="text-center mb-4 section-title"></h2>
       <!-- Categorías -->
       <div class="row mb-5">
         <div class="col-lg-12 d-flex justify-content-center">
@@ -69,7 +64,6 @@
         </div>
       </div>
 
-      <!-- Sección de tarjetas por categoría -->
       <div class="row justify-content-center">
         <!-- Tarjeta de ejemplo -->
         <div class="col-lg-4 col-md-6 mb-4 d-flex justify-content-center">
@@ -111,7 +105,6 @@
     </div>
   </main>
 
-  <!-- Footer reutilizado -->
   <footer class="bg-dark text-white py-4">
     <div class="container">
       <div class="row">
