--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
   <header>
     <div class="top-header">
       <div class="container d-flex flex-column align-items-center">
-        <!-- Logo -->
         <a href="#">
           <img class="logo" src="img/logoluz.jpg" alt="Logo">
         </a>
-        <!-- Imagen que reemplaza el nombre de la empresa -->
         <img class="company-name-image" src="img/luzz.jpg" alt="Company Name">
       </div>
     </div>
@@ -94,12 +92,12 @@
       </div>
     </div>
 
-    <!-- Title for the card section -->
+    <!--Titulo-->
     <div class="container text-center my-5">
       <h2 class="featured-title">DISEÑOS DESTACADOS</h2>
     </div>
 
-    <!-- Cards Section -->
+    <!-- Cards  -->
     <div class="cards-container">
       <div class="card">
         <img src="img/destacado1.jpg" class="card-img-top" alt="Card Image 1">
