--- a/sections/shop.html
+++ b/sections/shop.html
@@ -6,6 +6,28 @@
     <link rel="stylesheet" href="../css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Shop</title>
+    <style>
+      /* Estilo adicional para asegurar la proporción adecuada */
+      .elegant-card {
+        max-width: 100%;
+        height: auto;
+      }
+
+      /* Ajustar el tamaño de las tarjetas */
+      .card-body {
+        padding: 20px;
+      }
+
+      .card-img-top {
+        height: 250px; /* Altura fija para mantener proporción */
+        object-fit: cover; /* Mantener proporción de la imagen */
+      }
+
+      /* Margen entre las tarjetas */
+      .row .col-lg-3, .row .col-md-4, .row .col-sm-6 {
+        padding: 15px;
+      }
+    </style>
 </head>
 <body class="body-b">
   <header>
@@ -27,16 +49,7 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
             </li>
-            <!--<li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Shop
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="desfiles.html">Desfiles</a></li>
-                <li><a class="dropdown-item" href="vestidos.html">Vestidos</a></li>
-              </ul>
-            </li>-->
-            <li class="nav-item"></li>
+            <li class="nav-item">
               <a class="nav-link" href="../sections/shop.html">Shop</a>
             </li>
             <li class="nav-item">
@@ -52,8 +65,8 @@
   </header>
 
   <main class="main-l">
-    <div class="container mt-5">
-      <h2 class="text-center mb-4 section-title"></h2>
+
+
       <!-- Categorías -->
       <div class="row mb-5">
         <div class="col-lg-12 d-flex justify-content-center">
@@ -63,46 +76,37 @@
           <button class="btn btn-elegant mx-2">Parte Inferior</button>
         </div>
       </div>
-
-      <div class="row justify-content-center">
-        <!-- Tarjeta de ejemplo -->
-        <div class="col-lg-4 col-md-6 mb-4 d-flex justify-content-center">
-          <div class="card elegant-card h-100 shadow-sm">
-            <img src="../img/destacado1.jpg" class="card-img-top" alt="Producto 1">
-            <div class="card-body text-center">
-              <h5 class="card-title">Vestido</h5>
-              <p class="card-text"></p>
-              <p class="card-text fw-bold"></p>
-              <a href="#" class="btn btn-elegant">Agregar al Carrito</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 mb-4 d-flex justify-content-center">
-          <div class="card elegant-card h-100 shadow-sm">
-            <img src="../img/destacado4.jpg" class="card-img-top" alt="Producto 2">
-            <div class="card-body text-center">
-              <h5 class="card-title">Vestido</h5>
-              <p class="card-text"></p>
-              <p class="card-text fw-bold"></p>
-              <a href="#" class="btn btn-elegant">Agregar al Carrito</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 mb-4 d-flex justify-content-center">
-          <div class="card elegant-card h-100 shadow-sm">
-            <img src="../img/destacado2.jpg" class="card-img-top" alt="Producto 3">
-            <div class="card-body text-center">
-              <h5 class="card-title">Vestido</h5>
-              <p class="card-text"></p>
-              <p class="card-text fw-bold"></p>
-              <a href="#" class="btn btn-elegant">Agregar al Carrito</a>
-            </div>
-          </div>
-        </div>
+       <!-- Cards  -->
+    <div class="cards-container">
+      <div class="card">
+        <img src="../img/destacado1.jpg" class="card-img-top" alt="Card Image 1">
+      </div>
+      <div class="card">
+        <img src="../img/destacado2.jpg" class="card-img-top" alt="Card Image 2">
+      </div>
+      <div class="card">
+        <img src="../img/destacado3.jpg" class="card-img-top" alt="Card Image 3">
+      </div>
+      <div class="card">
+        <img src="../img/destacado4.jpg" class="card-img-top" alt="Card Image 4">
       </div>
     </div>
+    <div class="cards-container">
+      <div class="card">
+        <img src="../img/destacado1.jpg" class="card-img-top" alt="Card Image 1">
+      </div>
+      <div class="card">
+        <img src="../img/destacado2.jpg" class="card-img-top" alt="Card Image 2">
+      </div>
+      <div class="card">
+        <img src="../img/destacado3.jpg" class="card-img-top" alt="Card Image 3">
+      </div>
+      <div class="card">
+        <img src="../img/destacado4.jpg" class="card-img-top" alt="Card Image 4">
+      </div>
+    </div>
+
+
   </main>
 
   <footer class="bg-dark text-white py-4">
@@ -119,7 +123,7 @@
               <a class="text-white" href="#"><img src="../img/instagram.png" alt="Instagram" width="24"></a>
             </li>
             <li class="ms-3">
-              <a class="text-white" href="#"><img src="../img/tik-tok (1).png" alt="Twitter" width="24"></a>
+              <a class="text-white" href="#"><img src="../img/tik-tok (1).png" alt="TikTok" width="24"></a>
             </li>
           </ul>
         </div>
