--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <header>
     <div class="top-header">
       <div class="container d-flex flex-column align-items-center">
+
         <a href="#">
           <img class="logo" src="img/logoluz.jpg" alt="Logo">
         </a>
@@ -22,7 +23,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse navbar-centered" id="navbarTogglerDemo02">
+        <div class="collapse navbar-collapse navbar-center" id="navbarTogglerDemo02">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
