--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -36,6 +36,9 @@
             <li class="nav-item">
               <a class="nav-link" href="../sections/nosotros.html">AboutUs</a>
             </li>
+            <a class="nav-link" href="../sections/servivios.html">Diseños a Medida</a>
+          </li>
+            
             <li class="nav-item">
               <a class="nav-link" href="../sections/contacto.html">Contacto</a>
             </li>
