--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse navbar-center" id="navbarTogglerDemo02">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
             <!--<li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -42,6 +42,8 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./sections/nosotros.html">AboutUs</a>
+            </li>
+            <a class="nav-link" href="./sections/servivios.html">Diseños a medida</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./sections/contacto.html">Contacto</a>
