--- a/sections/shop.html
+++ b/sections/shop.html
@@ -33,6 +33,8 @@
             <li class="nav-item">
               <a class="nav-link" href="../sections/nosotros.html">AboutUs</a>
             </li>
+            <li class="nav-item"></li>
+              <a class="nav-link" href="../sections/servivios.html">Diseños a Medida</a>
             <li class="nav-item">
               <a class="nav-link" href="../sections/contacto.html">Contacto</a>
             </li>
