--- a/sections/servivios.html
+++ b/sections/servivios.html
@@ -91,13 +91,13 @@
           <h5>Contactate con nosotros</h5>
           <ul class="list-unstyled d-flex justify-content-center">
             <li class="ms-3">
-              <a class="text-white" href="#"><img src="./img/facebook.png" alt="Facebook" width="24"></a>
+              <a class="text-white" href="#"><img src="../img/facebook.png" alt="Facebook" width="24"></a>
             </li>
             <li class="ms-3">
-              <a class="text-white" href="#"><img src="./img/instagram.png" alt="Instagram" width="24"></a>
+              <a class="text-white" href="#"><img src="../img/instagram.png" alt="Instagram" width="24"></a>
             </li>
             <li class="ms-3">
-              <a class="text-white" href="#"><img src="./img/tik-tok (1).png" alt="tik-tok" width="24"></a>
+              <a class="text-white" href="#"><img src="../img/tik-tok (1).png" alt="tik-tok" width="24"></a>
             </li>
           </ul>
         </div>
